k8s/secure-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-service-deployment
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: secure-service               # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
      labels:
        app: secure-service               # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: antohachaban/secure-service:latest       # образ Docker
          imagePullPolicy: IfNotPresent  
          name: secure-service           # ім'я контейнеру
          ports:
            - containerPort: 8080  # порт по якому можна звертатись до поди
