k8s/secure-service/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: secure-service-ingress

  annotations:

    kubernetes.io/ingress.class: "nginx"

spec:

  rules:

    - http:

        paths:

          - path: /login

            pathType: ImplementationSpecific

            backend:

              service:

                name: secure-service-service

                port:

                  number: 80
